# lau-combinatorics

./: AGENT.md  Cargo.toml  README.md
memory/: JOURNAL.md
src/: agent_topology.rs  basic.rs  burnside.rs  catalan.rs  generating.rs  graph_coloring.rs  inclusion_exclusion.rs  lib.rs  partition.rs  pigeonhole.rs  tree_enum.rs
